# sparkie_fw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  micro_ros_pico_import.cmake
.devcontainer/: Dockerfile  devcontainer.json
port/FreeRTOS-Kernel/: FreeRTOSConfig.h  cppMemory.cpp  idleMemory.c
python/: motor.py
src/: CMakeLists.txt  config.hpp  hube_defs.hpp  main.cpp  sparkie_defs.hpp
src/agents/: Agent.cpp  Agent.hpp  URosAgent.cpp  URosAgent.hpp
src/components/: AgentComponent.cpp  AgentComponent.hpp  AirQualityComponent.hpp  BatteryComponent.hpp  BuzzerComponent.cpp  BuzzerComponent.hpp  Component.cpp  Component.hpp  DHTComponent.cpp  DHTComponent.hpp  ImuComponent.cpp  ImuComponent.hpp  LedStripComponent.cpp  LedStripComponent.hpp  LoggerComponent.cpp  LoggerComponent.hpp  MotorsComponent.cpp  MotorsComponent.hpp  ServoComponent.cpp  ServoComponent.hpp  StatsComponent.hpp  SystemComponent.cpp  SystemComponent.hpp  URosComponent.cpp  URosComponent.hpp  UltrasonicComponent.cpp  UltrasonicComponent.hpp
src/components/agent/: AgentComponent.cpp  AgentComponent.hpp
src/components/aht/: AHTComponent.cpp  AHTComponent.hpp
src/components/air_quality/: AirQualityComponent.cpp  AirQualityComponent.hpp
src/components/battery/: BatteryComponent.cpp  BatteryComponent.hpp
src/components/buzzer/: BuzzerComponent.cpp  BuzzerComponent.hpp
src/components/dht/: DHTComponent.cpp  DHTComponent.hpp
src/components/imu/: ImuComponent.cpp  ImuComponent.hpp
src/components/led_strip/: LedStripComponent.cpp  LedStripComponent.hpp
src/components/logger/: LoggerComponent.cpp  LoggerComponent.hpp
src/components/motors/: MotorsComponent.cpp  MotorsComponent.hpp
src/components/odometry/: OdometryComponent.cpp  OdometryComponent.hpp
src/components/servo/: ServoComponent.cpp  ServoComponent.hpp
src/components/stats/: StatsComponent.cpp  StatsComponent.hpp
src/components/system/: SystemComponent.cpp  SystemComponent.hpp
src/components/ultrasonic/: UltrasonicComponent.cpp  UltrasonicComponent.hpp
src/components/uros/: URosComponent.cpp  URosComponent.hpp
src/led_effects/: FadeInOut.cpp  FadeInOut.hpp  Ring.cpp  Ring.hpp  Static.cpp  Static.hpp  StripEffect.cpp  StripEffect.hpp  colors.hpp
src/misc/: Pid.cpp  Pid.hpp  TaskRunTime.h  us_echo.pio  us_echo.pio.h  us_trig.pio  us_trig.pio.h
src/transport/: pico_uart_transport.c  pico_uart_transports.h
src/transports/: pico_uart_transport.c  pico_uart_transport.h  pico_usb_transport.c  pico_usb_transport.h
